<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Eat Well</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="backButtonText">Back</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome! Let\'s start by customizing Eat Well with your goals.</string>
    <string name="continue_text">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_text">Let\'s start by setting your fitness goal. Please select one from below!</string>
    <string name="activity_text">\n What is your daily activity level? </string>
    <string name="gender_text">Which gender do you identify with the most?</string>
    <string name="female_text">Female</string>
    <string name="male_text">Male</string>
    <string name="age_question">What\'s your date of birth?</string>
    <string name="age_hint">Date of birth</string>
    <string name="height_hint">Your height</string>
    <string name="country_text">What\'s your country of residence?</string>
    <string name="create_account_text">Let\'s create your account</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="finish_text">Finish</string>
    <string name="height_question">What\'s your height?</string>
    <string name="weight_question">What\'s your weight?</string>
    <string name="in_cm">In/Cm</string>
    <string name="weight_hint">Your weight</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="account_login">Log into your account</string>
    <string name="check">Check</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="email">Email</string>
    <string name="fitnessGoal">Fitness Goal</string>
    <string name="activityLevel">Activity Level</string>
    <string name="gender">Gender</string>
    <string name="heightUnit">Height Unit</string>
    <string name="weightUnit">Weight Unit</string>
    <string name="age">Age</string>
    <string name="dob">DOB</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="unit_cm">kg</string>
    <string name="unit_in">lbs</string>
    <string name="underweight_category_message"><![CDATA[Underweight Category BMI <18.5]]></string>
    <string name="healthy_category_message">Healthy Weight Category BMI between 18.5 and 24.9</string>
    <string name="obese_category_message"><![CDATA[Obese Category BMI >30]]></string>
    <string name="overweight_category_message">Overweight Category between 25 and 29.9</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_should_be">Password should be:</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_one_uppercase">At least one uppercase</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="at_least_one_symbol">At least one symbol</string>
    <string name="exercise">Exercise</string>
    <string name="water_intake">Water intake</string>
    <string name="water_cup">Water cup</string>
    <string name="weight_cat">Weight</string>
    <string name="add">Add</string>
    <string name="today_s_calories">Today\'s calories</string>
    <string name="food_cat">Food</string>
    <string name="steps_cat">Steps</string>
    <string name="fitness">Fitness Goal</string>
    <string name="daily_Activity">Daily activity</string>
    <string name="notifications">Notifications</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="menu">menu</string>
    <string name="profile">Profile</string>
    <string name="settings">Goal Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading..</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="new_date_of_birth">New Date of Birth</string>
    <string name="search_for_exercises">Search for exercises</string>
    <string name="close">Close</string>
    <string name="eat_well_logo">Eat Well Logo</string>
    <string name="daily_calorie_goal">Calorie Goal</string>
    <string name="exercise_goal">Exercise Goal</string>
    <string name="water_goal">Water Goal</string>
    <string name="goals">Goals</string>
    <string name="new_calories_goal">New Calories Goal</string>
    <string-array name="weight_categories_array">
        <item>>18.5</item>
        <item>18.5–24.9</item>
        <item>25–29.9</item>
        <item>>30</item>
    </string-array>
    <string-array name="goals_array">
        <item>Losing Weight</item>
        <item>Gaining Weight</item>
        <item>Gaining Muscle</item>
        <item>Increasing Step Count</item>
        <item>Stress Reduction</item>
        <item>Weight Maintenance</item>
        <item>Health Management</item>
    </string-array>
    <string-array name="activity_level_array">
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Active</item>
        <item>Highly Active</item>
    </string-array>
    <string-array name="height_units_array">
        <item>cm</item>
        <item>inches</item>
    </string-array>
    <string-array name="weight_units_array">
        <item>kg</item>
        <item>lbs</item>
    </string-array>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="fr">FR</string>
    <string name="ro">RO</string>
    <string name="es">ES</string>
    <string name="us">US</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="record_your_exercise_now_or_add_manually">Record your exercise now or add manually</string>
    <string name="add_workout">Add Workout</string>
    <string name="save">Save</string>
    <string name="time_yourself">Time Yourself</string>
    <string name="add_record">Add Record</string>
</resources>