<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseRecorderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/eatwellgreen"
        android:elevation="4dp"
        android:foregroundTint="@color/white"
        android:popupTheme="@style/Theme.CalorieCounter"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_check"
        app:title="@string/add_workout"
        app:titleMarginStart="16dp"
        app:titleTextAppearance="@style/Theme.CalorieCounter"
        app:titleTextColor="@color/white" >

        <ImageView
            android:id="@+id/ivSave"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:contentDescription="@string/save" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabExercise"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/record_your_exercise_now_or_add_manually"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabTextAppearance="@style/Theme.CalorieCounter">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabTimeYourself"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time_yourself" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_record" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tabExercise"
        app:layout_constraintStart_toStartOf="@+id/tabExercise"
        app:layout_constraintTop_toBottomOf="@+id/tabExercise" />

</androidx.constraintlayout.widget.ConstraintLayout>