<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.EIM.LanguageActivityEIM">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/custom_input_text"
        android:drawablePadding="8dp"
        android:fontFamily="@font/lora_font"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/encountry"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/ivFlag"
        android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/encountry">

    </ImageView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/eatwellgreenlight"
        android:fontFamily="@font/lora_font"
        android:padding="24dp"
        android:text="@string/choose_your_gender"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/big_text_size" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="8dp">

        <RadioGroup
            android:id="@+id/rgGenderInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="0.4"
                android:background="@drawable/select_button"
                android:button="@color/eatwellgreenlight"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lora_font"
                android:text="@string/female"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="0.4"
                android:background="@drawable/select_button"
                android:button="@color/eatwellgreenlight"
                android:fontFamily="@font/lora_font"
                android:text="@string/male"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/eatwellgreenlight"
        android:fontFamily="@font/lora_font"
        android:padding="24dp"
        android:text="@string/choose_your_language"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/big_text_size" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="8dp">
    <RadioGroup
        android:id="@+id/rgChooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/rbFrench"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.4"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/lora_font"
            android:text="@string/fr"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rbRomanian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/lora_font"
            android:text="@string/ro"
            android:shadowColor="@color/gray"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/lora_font"
            android:text="@string/us"
            android:shadowColor="@color/gray"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/rbSpanish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="0.4"
            android:fontFamily="@font/lora_font"
            android:text="@string/es"
            android:shadowColor="@color/gray"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>